--- a/cakephp/Dockerfile
+++ b/cakephp/Dockerfile
@@ -1,2 +1,8 @@
 FROM php:7.3.5-fpm
-CMD echo "Hello world! This is my first Docker image."
+
+# PHP
+# intl
+RUN apt-get update \
+	&& apt-get install -y libicu-dev \
+	&& docker-php-ext-configure intl \
+	&& docker-php-ext-install intl
