--- a/cakephp/Dockerfile
+++ b/cakephp/Dockerfile
@@ -1,8 +1,5 @@
 FROM php:7.3.5-fpm
 
-# PHP
-# intl
-RUN apt-get update \
-	&& apt-get install -y libicu-dev \
-	&& docker-php-ext-configure intl \
-	&& docker-php-ext-install intl
+MAINTAINER kaliel <maxime@kaliel.fr>
+
+RUN apt-get update
